--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,18 @@ project:
   type: website
 
 website:
-  title: "quarto"
+  title: "Сайт преподавателя"
   navbar:
+    background: primary
+    search: true
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+    right: 
+      - href: stud_work.qmd
+        text: "Работы студентов"
+      - href: cv.qmd
 
 format:
   html:
